[project]
name = "livepeer-vllm"
version = "0.1.0"
description = "vLLM (OpenAI-compatible LLM) example app for the Livepeer network."
requires-python = ">=3.12"
dependencies = [
    "aiohttp",          # for gateway.py (the OpenAI -> Livepeer gateway)
    "livepeer-gateway",
    "openai",           # for client.py (stock OpenAI library)
]

# livepeer-gateway is not on PyPI yet; pull it from the branch.
[tool.uv.sources]
livepeer-gateway = { git = "https://github.com/livepeer/livepeer-python-gateway", branch = "ja/live-runner" }
